--- a/flask-server/requirements.txt
+++ b/flask-server/requirements.txt
@@ -1,12 +1,12 @@
 alembic==0.9.1
 appdirs==1.4.3
 click==6.7
-Flask==0.12.1
+flask>=1.0.0
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2>=2.10.1
 Mako==1.0.6
 MarkupSafe==1.0
 packaging==16.8
@@ -14,5 +14,5 @@ psycopg2==2.7.1
 pyparsing==2.2.0
 python-editor==1.0.3
 six==1.10.0
-SQLAlchemy==1.1.9
+SQLAlchemy>=1.3.0
 Werkzeug==0.12.1
